[package]
name = "s3glob"
version = "0.4.12"
edition = "2024"
authors = ["Brandon W Maister <quodlibetor@gmail.com>"]
license = "MIT, APACHE-2.0"
repository = "https://github.com/quodlibetor/s3glob"
homepage = "https://github.com/quodlibetor/s3glob"
readme = "README.md"
description = "A fast aws s3 ls and downloader that supports glob patterns"
publish = false

[package.metadata.dist]
dist = true

[package.metadata.wix]
upgrade-guid = "52B953CD-E011-4E0F-B58F-C28AE9AD5A91"
path-guid = "17776F56-17A4-455A-9449-681E647216CB"
license = false
eula = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1.88"
aws-config = { version = "1.0", default-features = false, features = [
  "sso",
  "default-https-client",
  "rt-tokio",
] }
aws-sdk-s3 = { version = "1.0", default-features = false, features = [
  "default-https-client",
  "rt-tokio",
] }
aws-smithy-runtime-api = { version = "1.0", features = ["client", "http-1x"] }
aws-smithy-types = { version = "1.0", features = ["http-body-1-x"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "native-tokio", "tls12"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
rustls-platform-verifier = "0.6"
tower = "0.5"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
futures = "0.3"
humansize = { version = "2.0.0", features = ["no_alloc"] }
itertools = "0.14.0"
num-format = "0.4"
regex = "1.10"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_fs = { version = "1.1.3", features = ["color"] }
assert_cmd = "2.0"
predicates = "3.1"
assert2 = "0.3"
rstest = "0.26"
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["minio"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
